--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;1,100');
+
+* {
+  margin :0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  /*color*/
+  --body-bg-color: white;
+  --sidebar-bg-color: rgb(222, 218, 218);
+  --text-color: rgb(46, 46, 46);
+  --title-color: black;
+  --date-color: rgb(10, 94, 159);
+
+  --icon-color: var(--text-color);
+  --circle-color: rgb(142, 142, 142);
+  --circle-color-plain: rgb(52, 52, 52);
+
+  --body-font: "Poppins","Sans-serif";
+  --h1-font-size: 1.7rem;
+  --h2-font-size: 1.3rem;
+  --h3-font-size: 1.1rem;
+  --h4-font-size: 1rem;
+
+  --spacing-1: .4rem;
+  --spacing-2: .8rem;
+  --spacing-3: 1.2rem;
+  --spacing-4: 1.5rem;
+  --spacing-5: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: var(--body-font);
+  font-weight: 200;
+  color: var(--text-color);
+  background-color: var(--body-bg-color);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1, h2, h3 {
+  margin-bottom: var(--spacing-1);
+  font-weight: 400;
+  color: var(--title-color);
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size:var(--h1-font-size);
+  text-transform: uppercase;
+}
+
+p{
+  margin-bottom: var(--spacing-2);
+}
+
+@media screen and (min-width:768px) {
+.grid_container {
+ display: grid;
+ grid-template-columns: 1fr 3fr;
+}
+}
+
+.sidebar {
+  padding: 1.5rem;
+  background-color: var(--sidebar-bg-color);
+}
+
+.main {
+  padding: 1.5rem;
 }
