--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,24 @@ h1 {
   text-transform: uppercase;
 }
 
+h2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--spacing-4);
+  font-size: var(--h2-font-size);
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
 p{
+  margin-bottom: var(--spacing-2);
+}
+
+ul {
+  padding-left: 1.3rem;
+}
+
+li {
   margin-bottom: var(--spacing-2);
 }
 
