--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;1,100');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500');
 
-* {
-  margin :0;
-  padding: 0;
+*, ::before, ::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-  /*color*/
-  --body-bg-color: white;
-  --sidebar-bg-color: rgb(222, 218, 218);
-  --text-color: rgb(46, 46, 46);
-  --title-color: black;
-  --date-color: rgb(10, 94, 159);
 
-  --icon-color: var(--text-color);
-  --circle-color: rgb(142, 142, 142);
-  --circle-color-plain: rgb(52, 52, 52);
+  --body-bg-color: #e5ecf5;
+  --sidebar-bg-color: #cddee6;
+  --text-color: #333333;
+  --title-color: #111111;
+  --date-color: #1f94c2;
+  --dark-body-bg-color: #242424;
+  --dark-sidebar-bg-color: #171717;
+  --dark-text-color: #d8d8d8;
+  --dark-title-color: #ffffff;
+  --dark-date-color: #b4defe;
+  
+  --icon-color:var(--text-color);
+  --circle-color: rgb(168, 172, 176);
+  --circle-color-plain: rgb(74, 74, 74);  
+  --dark-icon-color:var(--dark-text-color);
+  --dark-circle-color: rgb(108, 108, 108);
+  --dark-circle-color-plain: rgb(238, 238, 238);
 
-  --body-font: "Poppins","Sans-serif";
+  --body-font: "Poppins", "Sans-serif";
   --h1-font-size: 1.7rem;
   --h2-font-size: 1.3rem;
   --h3-font-size: 1.1rem;
@@ -32,21 +40,24 @@
 }
 
 body {
-  font-family: var(--body-font);
+  font-family: var(--body-font);  
   font-weight: 200;
-  color: var(--text-color);
   background-color: var(--body-bg-color);
+  color: var(--text-color);  
+}
+.dark {  
+  background-color: var(--dark-body-bg-color);
+  color: var(--dark-text-color);
 }
 
 h1, h2, h3 {
   margin-bottom: var(--spacing-1);
-  font-weight: 400;
+  font-weight: 400;    
   color: var(--title-color);
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
+.dark h1, .dark h2, .dark h3 {
+  color: var(--dark-title-color);
 }
 
 h1 {
@@ -56,37 +67,140 @@ h1 {
 
 h2 {
   display: flex;
-  align-items: center;
+  align-items: center;  
   margin-bottom: var(--spacing-4);
   font-size: var(--h2-font-size);
   letter-spacing: 4px;
   text-transform: uppercase;
 }
 
-p{
+h3 {
+  font-size: var(--h3-font-size);
+}
+
+h4 {
+  font-size: var(--h4-font-size);
+}
+
+p {
   margin-bottom: var(--spacing-2);
 }
 
 ul {
-  padding-left: 1.3rem;
+  padding-left:1.3rem;
 }
 
 li {
   margin-bottom: var(--spacing-2);
 }
 
-@media screen and (min-width:768px) {
-.grid_container {
- display: grid;
- grid-template-columns: 1fr 3fr;
-}
+a {
+  text-decoration: none;
+  color: var(--text-color);
 }
 
-.sidebar {
-  padding: 1.5rem;
-  background-color: var(--sidebar-bg-color);
+.dark a {
+  color: var(--dark-text-color);
+}
+
+button {
+  background: none;
+  border:none;
+  outline: none;
+  cursor: pointer;
+}
+
+.dark button {
+  color: var(--dark-text-color);
+}
+
+.mb3 {
+  margin-bottom: var(--spacing-3);
+}
+.mb5 {
+  margin-bottom: var(--spacing-5);
+}
+
+.grid__row {
+  margin: var(--spacing-3) 0;
+  
+}
+@media screen and (min-width:768px) {
+  .grid__container {
+    display: grid;  
+    grid-template-columns: 1fr 3fr;
+  }
+  .grid__row {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 0;
+  }
+}
+
+.sidebar { 
+  position: relative;
+  padding:1.5rem;
+  background-color: var(--sidebar-bg-color); 
+}
+
+.sidebar::before {
+  position: absolute;
+  top:0;
+  left: 0;
+  z-index: 0;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 120px;
+  background-color: #5d7c8f;
+  clip-path: polygon(0 0, 100% 1%, 100% 100%, 75% 86%, 25% 86%, 0 100%);
+}
+ 
+.dark .sidebar {
+  background-color: var(--dark-sidebar-bg-color);
+}
+
+.actions {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .main {
-  padding: 1.5rem;
+  padding:1.5rem;  
+}
+
+#cv-print {
+  width: 100% !important;
+} 
+.cv-print ul {
+  margin:0;
+  padding:0;
+  
+}
+.cv-print ul li {
+  list-style-type:none;
+}
+.cv-print ul li:before {
+  content: "•";
+  display: inline-block; 
+  font-size: 110%;
+  padding-right: 10px;
+}
+.cv-print .grid__container {
+  font-size:12px !important;
+  max-width: 210mm;
+}
+.cv-print .sidebar {
+  height: 297mm;
+}
+.cv-print .user__infos svg {
+  display: none !important;
+}
+.cv-print .circle {
+  width:10px;
+  height:10px;
+}
+.cv-print .grid__date {
+  margin-top:5px;
 }
