--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,21 +1,21 @@
 .user {
-    text-align : center;
+ position: relative; 
+  text-align: center;  
 }
-
-.user__avatar {
-    border-radius: 50%;
+.user__avatar {  
+  border-radius: 50%;
 }
-
 .user__infos {
-    text-align: left;
-    padding:var(--spacing-3)0 var(--spacing-1)0;
+  text-align: left;  
+  padding:var(--spacing-3) 0 var(--spacing-1) 0;
 }
-
 .user__info {
-    display: flex;
+  display: flex;    
 }
-
 .user__info svg {
-    color: var(--icon-color);
-    margin-right: 1rem;
+  color:var(--icon-color);
+  margin-right:1rem;
+}
+.dark .user__info svg {
+  color:var(--dark-icon-color);
 }
