--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 :root {
 
   --body-bg-color: #e5ecf5;
-  --sidebar-bg-color: #cddee6;
+  --sidebar-bg-color: #bcd3de;
   --text-color: #333333;
   --title-color: #111111;
-  --date-color: #1f94c2;
+  --date-color: #1c8ebb;
   --dark-body-bg-color: #242424;
   --dark-sidebar-bg-color: #171717;
   --dark-text-color: #d8d8d8;
@@ -152,7 +152,7 @@ button {
   display: block;
   width: 100%;
   height: 120px;
-  background-color: #5d7c8f;
+  background-color: #7e8f9a;
   clip-path: polygon(0 0, 100% 1%, 100% 100%, 78% 86%, 25% 86%, 0 100%);
 }
  
